--- a/angular.json
+++ b/angular.json
@@ -93,6 +93,42 @@
           }
         }
       }
+    },
+    "abcs-utils": {
+      "projectType": "library",
+      "root": "projects/abcs-utils",
+      "sourceRoot": "projects/abcs-utils/src",
+      "prefix": "lib",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:ng-packagr",
+          "options": {
+            "project": "projects/abcs-utils/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/abcs-utils/tsconfig.lib.prod.json"
+            },
+            "development": {
+              "tsConfig": "projects/abcs-utils/tsconfig.lib.json"
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "tsConfig": "projects/abcs-utils/tsconfig.spec.json",
+            "polyfills": [
+              "zone.js",
+              "zone.js/testing"
+            ]
+          }
+        }
+      }
     }
+  },
+  "cli": {
+    "analytics": "bcdbb94d-7b8f-4389-b556-8d85fd309785"
   }
 }
